core/server/tests/ui/require_audit/send_unaudited.stderr
error[E0277]: the trait bound `ForgedMemberBody: AuditedResponse` is not satisfied
  --> tests/ui/require_audit/send_unaudited.rs:21:33
   |
21 |     let _ = admin_response_body(&body);
   |             ------------------- ^^^^^ unsatisfied trait bound
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `AuditedResponse` is not implemented for `ForgedMemberBody`
  --> tests/ui/require_audit/send_unaudited.rs:8:1
   |
 8 | struct ForgedMemberBody {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `AuditedResponse`:
             AdminCredential
             AdminInviteRecord
             AdminRegisterCompleteResult
             AuditLogView
             DuplicatePhoneLinkView
             MemberIssuedView
             MemberListView
             MemberSummary
           and $N others
note: required by a bound in `admin_response_body`
  --> src/audited.rs
   |
   | pub fn admin_response_body<R: AuditedResponse + Serialize>(
   |                               ^^^^^^^^^^^^^^^ required by this bound in `admin_response_body`
